// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`react should apply composed mixins 1`] = `
<button
  class="__button_lm3xvp"
  style="--1owzm37_1:red"
>
  click me
</button>
`;

exports[`react should apply composed mixins 2`] = `".__button_lm3xvp{color:var(--1owzm37_1);padding:5px 10px;margin:10px;}"`;

exports[`react should apply conditional mixins 1`] = `
<button
  class="__button_nzpf5v"
  style="--14y9117_1:red"
>
  click me
</button>
`;

exports[`react should apply conditional mixins 2`] = `".__button_nzpf5v{color:white;background:var(--14y9117_1);margin:10px;}"`;

exports[`react should apply conditional mixins 3`] = `
<button
  class="__button_1pj7rgr"
  style="--134zod7_1:green"
>
  click me
</button>
`;

exports[`react should apply conditional mixins 4`] = `".__button_nzpf5v{color:white;background:var(--14y9117_1);margin:10px;}.__button_1pj7rgr{color:var(--134zod7_1);background:white;margin:10px;}"`;

exports[`react should apply dynamic mixins 1`] = `
<button
  class="__button_1hzemul"
  style="--xqnn5g_1:red"
>
  click me
</button>
`;

exports[`react should apply dynamic mixins 2`] = `".__button_1hzemul{color:var(--xqnn5g_1);border:none;margin:10px;}"`;

exports[`react should apply dynamic mixins 3`] = `
<button
  class="__button_1hzemul"
  style="--xqnn5g_1:green"
>
  click me
</button>
`;

exports[`react should apply dynamic mixins 4`] = `".__button_1hzemul{color:var(--xqnn5g_1);border:none;margin:10px;}"`;

exports[`react should apply dynamic styles 1`] = `
<button
  class="__button_1pacrc6"
  style="--xkvkx5_1:red"
>
  click me
</button>
`;

exports[`react should apply dynamic styles 2`] = `".__button_1pacrc6{color:var(--xkvkx5_1);}"`;

exports[`react should apply dynamic styles 3`] = `
<button
  class="__button_1pacrc6"
  style="--xkvkx5_1:green"
>
  click me
</button>
`;

exports[`react should apply dynamic styles 4`] = `".__button_1pacrc6{color:var(--xkvkx5_1);}"`;

exports[`react should apply external dynamic styles 1`] = `
<button
  class="__button_1pacrc6"
  style="--xkvkx5_1:red"
>
  click me
</button>
`;

exports[`react should apply external dynamic styles 2`] = `".__button_1pacrc6{color:var(--xkvkx5_1);}"`;

exports[`react should apply external dynamic styles 3`] = `
<button
  class="__button_1pacrc6"
  style="--xkvkx5_1:green"
>
  click me
</button>
`;

exports[`react should apply external dynamic styles 4`] = `".__button_1pacrc6{color:var(--xkvkx5_1);}"`;

exports[`react should apply external styles 1`] = `
<button
  class="__button_olz31h"
>
  click me
</button>
`;

exports[`react should apply external styles 2`] = `".__button_olz31h{color:red;}"`;

exports[`react should apply global styles 1`] = `
<button
  style="--aku94k_1:red"
>
  click me
</button>
`;

exports[`react should apply global styles 2`] = `"button + button{color:var(--aku94k_1);}"`;

exports[`react should apply mixins 1`] = `
<button
  class="__button_13d2oc0"
>
  click me
</button>
`;

exports[`react should apply mixins 2`] = `".__button_13d2oc0{color:red;border:none;margin:10px;}"`;

exports[`react should apply mixins with pseudo 1`] = `
<button
  class="__button_1tuwmo"
>
  click me
</button>
`;

exports[`react should apply mixins with pseudo 2`] = `".__button_1tuwmo:focus{color:green;}.__button_1tuwmo{color:red;border:none;margin:10px;}"`;

exports[`react should apply object mixins 1`] = `
<button
  class="__button_qjpl95"
>
  click me
</button>
`;

exports[`react should apply object mixins 2`] = `".__button_qjpl95{padding:5px 10px;margin:10px;}"`;

exports[`react should apply styles 1`] = `
<button
  class="__button_olz31h"
>
  click me
</button>
`;

exports[`react should apply styles 2`] = `".__button_olz31h{color:red;}"`;
